tests/cases/parser/literals/unclosed_char_literal.stderr
error: unclosed character literal
 --> $DIR/unclosed_char_literal.hash:3:3
2 |   
3 |   'a
  |     ^ expected `'` here
